# example-python-package

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: approve.yml  codeql-analysis.yml  release.yml  test.yml  version.yml
src/org/app/: app.py
src/org/app/test/: test_it.py
