[tool.poetry]
name = "example-python-package"
version = "0.1.8"
description = "An example Python package with Poetry and autoreleasing Github Actions"
authors = ["Michael A. Smith <michael@smith-li.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "org/**/*.py", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = 'black'

[tool.mypy]
files = [
    'src/*'
]
