##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
#

[metadata]
name = app
description = Example
long_description = file: README.md
author = Michael A. Smith
author_email = michael@smith-li.com
url = https://github.com/kojiromike/example
license = MIT
classifiers =
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
include_package_data = True
packages = org.app
package_dir =
    = src
namespace_packages =
    org
setup_requires =
    setuptools_scm


[options.packages.find]
where = src
